Cleaned up lines of code and added buttons to the three blog sections.

--- a/index.html
+++ b/index.html
@@ -12,60 +12,69 @@
 <body>
 <article class="container">
 <!-- Callout -->
-        <section>
-            <div class="row">
-			    <div class="col-12">
-				    <div class="">
-					    <div class="overlay-hmpg">
-						    <div class="d-none d-lg-block">
-							    <h1><i class="fa fa-globe" aria-hidden="true"></i> Universal Relations Media
-							    	<i class="fa fa-globe" aria-hidden="true"></i></h1>
-						    </div>
-						    <div class="d-none d-sm-block d-lg-none">
-							    <span><h2><i class="fa fa-globe" aria-hidden="true"></i> URM <i class="fa fa-globe" aria-hidden="true"></i></h2></span>
-						    </div>
-						    <div class="d-block d-sm-none">
-							    <span><h2><i class="fa fa-globe" aria-hidden="true"></i></h2></span>
-						    </div>
-                            <hr>
-                            <div class="q-text d-block">
-                                <p>Because, <em>that's</em> not right...</p>
-                             </div>
+<section>
+    <div class="container-fluid">
+        <div class="row">
+    	    <div class="col-12">
+			    <div class="">
+				    <div class="overlay-hmpg">
+					    <div class="d-none d-lg-block">
+						    <h1><i class="fa fa-globe" aria-hidden="true"></i> Universal Relations Media
+						    	<i class="fa fa-globe" aria-hidden="true"></i></h1>
 					    </div>
-				    </div>    
-			    </div>
+					    <div class="d-none d-sm-block d-lg-none">
+						    <span><h2><i class="fa fa-globe" aria-hidden="true"></i> URM <i class="fa fa-globe" aria-hidden="true"></i></h2></span>
+					    </div>
+					    <div class="d-block d-sm-none">
+						    <span><h2><i class="fa fa-globe" aria-hidden="true"></i></h2></span>
+					    </div>
+                        <hr>
+                        <div class="d-block">
+                            <p>Because, <em>that's</em> not right...</p>
+                        </div>
+				    </div>
+			    </div>    
 		    </div>
-        </section>
+	    </div>
+    </div>
+</section>
 <!-- Callout Fin -->
 <hr>
 <!-- Blogs -->
-        <section>
-		    <div class="container-fluid btm-hmpg">
-			    <div class="">
-				    <div class="row">
-					    <div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
-						    <h2>Blog 1</h2>
-						    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores? Molestiae,
-							excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet magnam
-							distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
-					    </div>
-					    <div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
-						    <h2>Blog 2</h2>
-						    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores? Molestiae,
-							excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet magnam
-							distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
-					    </div>
-					    <div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
-						    <h2>Blog 3</h2>
-						    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores? Molestiae,
-							excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet magnam
-							distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
-					    </div>
-				    </div>
+<section>
+    <div class="container-fluid btm-hmpg">
+        <div class="">
+		    <div class="row">
+			    <div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
+				    <h2>Blog 1</h2>
+				    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores? Molestiae,
+					excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet magnam
+					distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+                    <button class="btn btn-warning">Read Here!</button>
+			    </div>
+			    <div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
+				    <h2>Blog 2</h2>
+				    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores? Molestiae,
+					excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet magnam
+					distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+                    <button class="btn btn-warning">Read Here!</button>
+			    </div>
+			    <div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
+				    <h2>Blog 3</h2>
+				    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores? Molestiae,
+					excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet magnam
+					distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+                    <button class="btn btn-warning">Read Here!</button>
 			    </div>
 		    </div>
-        </section>
+	    </div>
+    </div>
+</section>
 <!-- Blogs Fin -->
 </article>
+<!-- Java -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"	integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 </html>
