--- a/index.html
+++ b/index.html
@@ -1,80 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universal Relations Media</title>
-<!-- BStrap -->     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-<!-- GFonts -->     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800&family=Roboto+Slab:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"/>
-<!--FAwe-->         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Universal Relations Media</title>
+	<!-- BStrap -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+	</script>
+	<!-- GFonts -->
+	<link
+		href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800&family=Roboto+Slab:wght@300;400;500;600;700;800&display=swap"
+		rel="stylesheet" />
+	<!--FAwe-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<!-- My CSS -->
+	<link href="assets/styles.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-<article class="container">
-<!-- Callout -->
+	<nav class="navbar navbar-style navbar-expand-md fixed-top">
+		<button class="btn-outline-light navbar-toggler" data-toggle="collapse" data-target="#collapse_target"
+    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
+    </button>
+		<div class="collapse navbar-collapse" id="collapse_target">
+			<div class="navbar-logo">
+				<a class="navbar-brand" href="index.html">
+					<h1><i class="fa fa-globe" aria-hidden="true"></i></h1>
+				</a>
+				<span class="navbar-text"><h2>Universal Relations Media</h2></span>
+			</div>
+			<ul class="navbar-nav ml-auto mr-1">
+				<li class="nav-item">
+					<a class="nav-link" href="index.html">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Blogs</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Contact</a>
+				</li>
+			</ul>
+		</div>
+		<div class="d-none d-sm-block d-md-none">
+			<span><h2>URM</h2></span>
+		</div>
+	</nav>
+	<article class="container-fluid mt-5">
+		<!-- Callout -->
+
+		<div class="container-fluid hmpg-head">
+			<div class="row">
+					<div class="col-12">
+						<section class="text-center">
+							<div class="overlay-hmpg">
+								<div class="d-none d-lg-block">
+									<h1><i class="fa fa-globe" aria-hidden="true"></i> Universal Relations Media
+										<i class="fa fa-globe" aria-hidden="true"></i></h1>
+								</div>
+								<div class="d-none d-sm-block d-lg-none">
+									<span><h2><i class="fa fa-globe" aria-hidden="true"></i> URM <i class="fa fa-globe" aria-hidden="true"></i></h2></span>
+								</div>
+								<div class="d-block d-sm-none">
+									<span><h2><i class="fa fa-globe" aria-hidden="true"></i></h2></span>
+								</div>
+								<hr>
+								<div class="d-block">
+									<p>Because, <em>that's</em> not right...</p>
+								</div>
+							</div>
+						</section>
+					</div>
+				</div>
+		</div>
+
+		<!-- Callout Fin -->
+		<hr>
+		<!-- Blogs -->
 <section>
-    <div class="container-fluid">
-        <div class="row">
-    	    <div class="col-12">
-			    <div class="">
-				    <div class="overlay-hmpg">
-					    <div class="d-none d-lg-block">
-						    <h1><i class="fa fa-globe" aria-hidden="true"></i> Universal Relations Media
-						    	<i class="fa fa-globe" aria-hidden="true"></i></h1>
-					    </div>
-					    <div class="d-none d-sm-block d-lg-none">
-						    <span><h2><i class="fa fa-globe" aria-hidden="true"></i> URM <i class="fa fa-globe" aria-hidden="true"></i></h2></span>
-					    </div>
-					    <div class="d-block d-sm-none">
-						    <span><h2><i class="fa fa-globe" aria-hidden="true"></i></h2></span>
-					    </div>
-                        <hr>
-                        <div class="d-block">
-                            <p>Because, <em>that's</em> not right...</p>
-                        </div>
+	<div class="container-fluid btm-hmpg">
+		<div class="row">
+			<div class="media hmpg-text col-lg-4 col-md-6 col-sm-12">
+                <div class="d-flex flex-column">
+					<img src="assets/images/robot.jpg" alt="A brain in two halves. The left side is synthetic and the right side is organic"
+                    class="rounded img-fluid hp-img">
+					<span><br></span>
+					<div class="media-body">
+						<blockquote class="blockquote">
+							<h2>Automation</h2>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
+								Molestiae,
+								excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
+								magnam
+								distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+							<button class="btn btn-warning">Read Here!</button>
+						</blockquote>
+					</div>
+				</div>
+			</div>
+			<div class="media hmpg-text col-lg-4 col-md-6 col-sm-12">
+                <div class="d-flex flex-column">
+				    <img src="assets/images/society.jpg" alt="People with faces covered by emojis" 
+                    class="rounded img-fluid hp-img">
+				    <span><br></span>
+				    <div class="media-body">
+					    <blockquote class="blockquote">
+					    		<h2>Society</h2>
+					    		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
+					    		Molestiae,
+					    		excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
+					    		magnam
+					    		distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+					    	<button class="btn btn-warning">Read Here!</button>
+					    </blockquote>
+    			    </div>
+                </div>
+			</div>
+			<div class="media hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
+                <div class="d-flex flex-column">
+				    <img src="assets/images/earth.jpg" alt="The globe with many different locations linked by lines to convey globalization" 
+                    class="rounded img-fluid hp-img">
+				    <span><br></span>
+				    <div class="media-body">
+					    <blockquote class="blockquote">
+					    		<h2>Globalization</h2>
+					    		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
+					    		Molestiae,
+					    		excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
+					    		magnam
+					    		distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+					    	<button class="btn btn-warning">Read Here!</button>
+					    </blockquote>
 				    </div>
-			    </div>    
-		    </div>
-	    </div>
-    </div>
+                </div>    
+			</div>
+		</div>
+	</div>
 </section>
-<!-- Callout Fin -->
-<hr>
-<!-- Blogs -->
-<section>
-    <div class="container-fluid btm-hmpg">
-        <div class="">
-		    <div class="row">
-			    <div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
-				    <h2>Blog 1</h2>
-				    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores? Molestiae,
-					excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet magnam
-					distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
-                    <button class="btn btn-warning">Read Here!</button>
-			    </div>
-			    <div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
-				    <h2>Blog 2</h2>
-				    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores? Molestiae,
-					excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet magnam
-					distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
-                    <button class="btn btn-warning">Read Here!</button>
-			    </div>
-			    <div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
-				    <h2>Blog 3</h2>
-				    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores? Molestiae,
-					excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet magnam
-					distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
-                    <button class="btn btn-warning">Read Here!</button>
-			    </div>
-		    </div>
-	    </div>
-    </div>
-</section>
-<!-- Blogs Fin -->
-</article>
-<!-- Java -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"	integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+		<!-- Blogs Fin -->
+	</article>
+	<!-- Java -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+		integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+		integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
+	</script>
 </body>
+
 </html>
