Addd extra responsive styling to the blog sections

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 		<!-- Blogs -->
 <section>
 	<div class="container-fluid btm-hmpg">
-		<div class="row">
+		<div class="row text-center">
 			<div class="media hmpg-text col-lg-4 col-md-6 col-sm-12">
                 <div class="d-flex flex-column">
 					<img src="assets/images/robot.jpg" alt="A brain in two halves. The left side is synthetic and the right side is organic"
-                    class="rounded img-fluid hp-img">
+                    class="rounded img-fluid hp-img img-responsive">
 					<span><br></span>
 					<div class="media-body">
 						<blockquote class="blockquote">
@@ -105,7 +105,7 @@
 			<div class="media hmpg-text col-lg-4 col-md-6 col-sm-12">
                 <div class="d-flex flex-column">
 				    <img src="assets/images/society.jpg" alt="People with faces covered by emojis" 
-                    class="rounded img-fluid hp-img">
+                    class="rounded img-fluid hp-img img-responsive">
 				    <span><br></span>
 				    <div class="media-body">
 					    <blockquote class="blockquote">
@@ -123,7 +123,7 @@
 			<div class="media hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
                 <div class="d-flex flex-column">
 				    <img src="assets/images/earth.jpg" alt="The globe with many different locations linked by lines to convey globalization" 
-                    class="rounded img-fluid hp-img">
+                    class="rounded img-fluid hp-img img-responsive">
 				    <span><br></span>
 				    <div class="media-body">
 					    <blockquote class="blockquote">
