--- a/test2.html
+++ b/test2.html
@@ -39,7 +39,7 @@
 					<a class="nav-link" href="index.html">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="test2.html">Blogs</a>
+					<a class="nav-link" href="#">Blogs</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="test.html">Contact</a>
@@ -84,59 +84,47 @@
 <section>
 	<div class="container-fluid btm-hmpg">
 		<div class="row text-center">
-			<div class="media hmpg-text col-lg-4 col-md-6 col-sm-12">
-                <div class="d-flex flex-column">
-					<img src="assets/images/robot.jpg" alt="A brain in two halves. The left side is synthetic and the right side is organic"
-                    class="rounded img-fluid hp-img img-responsive">
-					<span><br></span>
-					<div class="media-body">
-						<blockquote class="blockquote">
-							<h2>Automation</h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
-								Molestiae,
-								excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
-								magnam
-								distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
-							<button class="btn btn-warning">Read Here!</button>
-						</blockquote>
-					</div>
-				</div>
-			</div>
-			<div class="media hmpg-text col-lg-4 col-md-6 col-sm-12">
-                <div class="d-flex flex-column">
-				    <img src="assets/images/society.jpg" alt="People with faces covered by emojis" 
-                    class="rounded img-fluid hp-img img-responsive">
-				    <span><br></span>
-				    <div class="media-body">
-					    <blockquote class="blockquote">
-					    		<h2>Society</h2>
-					    		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
+             <div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
+                <div class="card">
+                    <img class="card-img-top" src="assets/images/robot.jpg" alt="Card image cap">
+                        <div class="card-body">
+                        <h2>Automation</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
 					    		Molestiae,
 					    		excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
 					    		magnam
 					    		distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
-					    	<button class="btn btn-warning">Read Here!</button>
-					    </blockquote>
-    			    </div>
+                        </div>
+                        <button class="btn btn-warning">Read Here!</button>
+                </div>
+			</div>            
+			<div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
+                <div class="card">
+                    <img class="card-img-top" src="assets/images/society.jpg" alt="Card image cap">
+                        <div class="card-body">
+                        <h2>Society</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
+					    		Molestiae,
+					    		excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
+					    		magnam
+					    		distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+                        </div>
+                        <button class="btn btn-warning">Read Here!</button>
                 </div>
 			</div>
-			<div class="media hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
-                <div class="d-flex flex-column">
-				    <img src="assets/images/earth.jpg" alt="The globe with many different locations linked by lines to convey globalization" 
-                    class="rounded img-fluid hp-img img-responsive">
-				    <span><br></span>
-				    <div class="media-body">
-					    <blockquote class="blockquote">
-					    		<h2>Globalization</h2>
-					    		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
+			<div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
+                <div class="card">
+                    <img class="card-img-top" src="assets/images/earth.jpg" alt="Card image cap">
+                        <div class="card-body">
+                        <h2>Globalization</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
 					    		Molestiae,
 					    		excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
 					    		magnam
 					    		distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
-					    	<button class="btn btn-warning">Read Here!</button>
-					    </blockquote>
-				    </div>
-                </div>    
+                        </div>
+                        <button class="btn btn-warning">Read Here!</button>
+                </div>
 			</div>
 		</div>
 	</div>
