--- a/index.html
+++ b/index.html
@@ -22,126 +22,143 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-style navbar-expand-md fixed-top">
-		<button class="btn-outline-light navbar-toggler" data-toggle="collapse" data-target="#collapse_target"
-    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
-    </button>
-		<div class="collapse navbar-collapse" id="collapse_target">
-			<div class="navbar-logo">
-				<a class="navbar-brand" href="index.html">
-					<h1><i class="fa fa-globe" aria-hidden="true"></i></h1>
-				</a>
-				<span class="navbar-text"><h2>Universal Relations Media</h2></span>
+	<nav>
+		<div class="navbar navbar-style navbar-expand-md fixed-top">
+			<button class="btn-outline-light navbar-toggler" data-toggle="collapse" data-target="#collapse_target"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
+            </button>
+			<div class="collapse navbar-collapse" id="collapse_target">
+				<div class="navbar-logo">
+					<a class="navbar-brand" href="index.html">
+						<h1><i class="fa fa-globe" aria-hidden="true"></i></h1>
+					</a>
+					<span class="collapse navbar-text"><h2>Universal Relations Media</h2></span>
+				</div>
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Blogs</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="test.html">Contact</a>
+					</li>
+				</ul>
 			</div>
-			<ul class="navbar-nav ml-auto mr-1">
-				<li class="nav-item">
-					<a class="nav-link" href="index.html">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="test2.html">Blogs</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="test.html">Contact</a>
-				</li>
-			</ul>
-		</div>
-		<div class="d-none d-sm-block d-md-none">
-			<span><h2>URM</h2></span>
-		</div>
+			<div class="small-nav-logo">
+			<h2>URM</h2>
+		    </div>
+        </div>
 	</nav>
 	<article class="container-fluid mt-5">
 		<!-- Callout -->
 
 		<div class="container-fluid hmpg-head">
 			<div class="row">
-					<div class="col-12">
-						<section class="text-center">
-							<div class="overlay-hmpg">
-								<div class="d-none d-lg-block">
-									<h1><i class="fa fa-globe" aria-hidden="true"></i> Universal Relations Media
-										<i class="fa fa-globe" aria-hidden="true"></i></h1>
-								</div>
-								<div class="d-none d-sm-block d-lg-none">
-									<span><h2><i class="fa fa-globe" aria-hidden="true"></i> URM <i class="fa fa-globe" aria-hidden="true"></i></h2></span>
-								</div>
-								<div class="d-block d-sm-none">
-									<span><h2><i class="fa fa-globe" aria-hidden="true"></i></h2></span>
-								</div>
-								<hr>
-								<div class="d-block">
-									<p>Because, <em>that's</em> not right...</p>
-								</div>
+				<div class="col-12">
+					<section class="text-center">
+						<div class="overlay-hmpg">
+							<div class="d-none d-lg-block">
+								<h1><i class="fa fa-globe" aria-hidden="true"></i> Universal Relations Media
+									<i class="fa fa-globe" aria-hidden="true"></i></h1>
 							</div>
-						</section>
-					</div>
+							<div class="d-none d-sm-block d-lg-none">
+								<span><h2><i class="fa fa-globe" aria-hidden="true"></i> URM <i class="fa fa-globe" aria-hidden="true"></i></h2></span>
+							</div>
+							<div class="d-block d-sm-none">
+								<span><h2><i class="fa fa-globe" aria-hidden="true"></i></h2></span>
+							</div>
+							<hr>
+							<div class="d-block">
+								<p>Because, <em>that's</em> not right...</p>
+							</div>
+						</div>
+					</section>
 				</div>
+			</div>
 		</div>
 
 		<!-- Callout Fin -->
 		<hr>
 		<!-- Blogs -->
-<section>
-	<div class="container-fluid btm-hmpg">
-		<div class="row text-center">
-			<div class="media hmpg-text col-lg-4 col-md-6 col-sm-12">
-                <div class="d-flex flex-column">
-					<img src="assets/images/robot.jpg" alt="A brain in two halves. The left side is synthetic and the right side is organic"
-                    class="rounded img-fluid hp-img img-responsive">
-					<span><br></span>
-					<div class="media-body">
-						<blockquote class="blockquote">
-							<h2>Automation</h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
-								Molestiae,
-								excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
-								magnam
-								distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+		<section>
+			<div class="container-fluid btm-hmpg">
+				<div class="row text-center">
+					<div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
+						<div class="card">
+							<img class="card-img-top" src="assets/images/robot.jpg" alt="Card image cap">
+							<div class="card-body">
+								<h2>Automation</h2>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
+									Molestiae,
+									excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
+									magnam
+									distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+							</div>
 							<button class="btn btn-warning">Read Here!</button>
-						</blockquote>
+						</div>
+					</div>
+					<div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
+						<div class="card">
+							<img class="card-img-top" src="assets/images/society.jpg" alt="Card image cap">
+							<div class="card-body">
+								<h2>Society</h2>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
+									Molestiae,
+									excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
+									magnam
+									distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+							</div>
+							<button class="btn btn-warning">Read Here!</button>
+						</div>
+					</div>
+					<div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
+						<div class="card">
+							<img class="card-img-top" src="assets/images/earth.jpg" alt="Card image cap">
+							<div class="card-body">
+								<h2>Globalization</h2>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
+									Molestiae,
+									excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
+									magnam
+									distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+							</div>
+							<button class="btn btn-warning">Read Here!</button>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="media hmpg-text col-lg-4 col-md-6 col-sm-12">
-                <div class="d-flex flex-column">
-				    <img src="assets/images/society.jpg" alt="People with faces covered by emojis" 
-                    class="rounded img-fluid hp-img img-responsive">
-				    <span><br></span>
-				    <div class="media-body">
-					    <blockquote class="blockquote">
-					    		<h2>Society</h2>
-					    		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
-					    		Molestiae,
-					    		excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
-					    		magnam
-					    		distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
-					    	<button class="btn btn-warning">Read Here!</button>
-					    </blockquote>
-    			    </div>
-                </div>
-			</div>
-			<div class="media hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
-                <div class="d-flex flex-column">
-				    <img src="assets/images/earth.jpg" alt="The globe with many different locations linked by lines to convey globalization" 
-                    class="rounded img-fluid hp-img img-responsive">
-				    <span><br></span>
-				    <div class="media-body">
-					    <blockquote class="blockquote">
-					    		<h2>Globalization</h2>
-					    		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
-					    		Molestiae,
-					    		excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
-					    		magnam
-					    		distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
-					    	<button class="btn btn-warning">Read Here!</button>
-					    </blockquote>
-				    </div>
-                </div>    
-			</div>
-		</div>
-	</div>
-</section>
+		</section>
 		<!-- Blogs Fin -->
+
+		<br>
+
+		<section class="container-fluid">
+			<footer class="mx-auto my auto text-center">
+				<div class="row footer-style">
+					<div class="footer-logo col-lg-4 d-none d-lg-block">
+						<h5><a href="index.html">
+								<i class="fa fa-globe" aria-hidden="true"></i>
+							</a>
+							URM</h5>
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12">
+						<p>Copyright 2020<br>
+                        Universal Relations Media
+                        </p>
+					</div>
+					<div class="ftr-soc-lnk col-lg-4 col-md-6 col-sm-12">
+						<div class="row">
+							<a class="col-4" href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+							<a class="col-4" href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+							<a class="col-4" href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+						</div>
+					</div>
+				</div>
+			</footer>
+		</section>
 	</article>
 	<!-- Java -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
