--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Blogs</a>
+						<a class="nav-link" href="blogs.html">Blogs</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="test.html">Contact</a>
