Added first blog page. Fiddling with footer and content to make them as visually pleasing as possible.

--- a/blogs.html
+++ b/blogs.html
@@ -72,112 +72,24 @@
       </div>
     </nav>
     <article class="container-fluid mt-5">
-      <!-- Callout -->
-
-      <div class="container-fluid">
-        <div class="auto-head">
-          <div class="row">
-            <div class="col-12">
-              <section class="text-center">
-                <div class="overlay-hmpg">
-                  <div class="d-none d-lg-block">
-                    <h1>
-                      <i class="fa fa-globe" aria-hidden="true"></i> Universal
-                      Relations Media
-                      <i class="fa fa-globe" aria-hidden="true"></i>
-                    </h1>
-                  </div>
-                  <div class="d-none d-sm-block d-lg-none">
-                    <span
-                      ><h2>
-                        <i class="fa fa-globe" aria-hidden="true"></i> URM
-                        <i class="fa fa-globe" aria-hidden="true"></i></h2
-                    ></span>
-                  </div>
-                  <div class="d-block d-sm-none">
-                    <span
-                      ><h2><i class="fa fa-globe" aria-hidden="true"></i></h2
-                    ></span>
-                  </div>
-                  <hr />
-                  <div class="d-block">
-                    <p>Because, <em>that's</em> not right...</p>
-                  </div>
-                </div>
-              </section>
-            </div>
-          </div>
+      <!-- Content -->
+    <div class="container-fluid">
+      <div class="card-auto my-auto">
+        <img class="card-img-top-blog" src="assets/images/robot.jpg" alt="Card image cap" />
+        <div class="card-body">
+          <h1 class="card-title text-center"><u>Automation</u></h1>
+          <p class="card-text">
+            Automation, the advancement of robotic technology and artificial intelligence (AI) that surpasses human capabilities to perform tasks (MGI, 2017a, p. 1), is being heralded as the fourth industrial revolution (Calvão and Thara, 2019, p. 2). Following revolutions from the nineteenth-century attributed to: the steam engine; electrification; and microelectronics (Thomas, 2020). These former revolutions transformed the nature of work for the individual and had significant economic benefits for the states that had the capabilities to implement the use of new technologies (IOE, 2017, p. 6). Achieving these benefits required gradual changes in policy and the development of social programmes and infrastructure, providing a safety net for the individual through welfare systems, labour regulations and mandatory, state-funded education (MGI, 2017b, pp. 46-47) Ultimately leading to a duality of benefits for the state and their citizens: the state could effectively compete within an increasingly globalized economy vis-à-vis the improvement of working conditions and increased productivity, and incentivising the upskilling of their labour-force (Frey and Osborne, 2013, p. 12).
+          </p>
+          <p>
+            The stark difference between these revolutions and automation is the transformation of tasks that were routine, and easily mechanised, while still requiring the cognitive skills of humans (MGI, 2017a, p. 1). Recent developments in AI have led to greater cognitive abilities and accuracy than humans, such as can be seen with lip reading (MGI, 2017a, p. 3), and driverless cars, which was seen as an unachievable feature of robotics in 2004 (Frey and Osborne, 2013, p. 4). This highlights the exponential ability for machines to learn across short spans of time. The impact of AI and technological innovation is ‘ten times higher and at 300 times the scale or roughly 3000 times the impact of the Industrial Revolution’ (McKinsey Global Institute in IOE, 2017, p. 11). Thus, we are entering unknown territory for the future of the labour-force, with potentially catastrophic consequences for job displacement and a need for educational programmes that are recognised transnationally (IOE, 2017, p. 35).
+          </p>
         </div>
       </div>
+    </div>
+      <br>
 
-      <!-- Callout Fin -->
-      <hr />
-      <!-- Blogs -->
-      <section>
-        <div class="container-fluid btm-hmpg">
-          <div class="row text-center">
-            <div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
-              <div class="card">
-                <img class="card-img-top" src="#" alt="Card image cap" />
-                <div class="card-body">
-                  <h2>Automation</h2>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Repellat, maiores? Molestiae, excepturi sed modi recusandae
-                    voluptatum deleniti esse voluptas quis eveniet magnam
-                    distinctio? Ducimus dolore aut maiores, inventore obcaecati
-                    magnam!
-                  </p>
-                </div>
-                <button class="btn btn-warning">Read Here!</button>
-              </div>
-            </div>
-            <div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
-              <div class="card">
-                <img
-                  class="card-img-top"
-                  src="assets/images/society.jpg"
-                  alt="Card image cap"
-                />
-                <div class="card-body">
-                  <h2>Society</h2>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Repellat, maiores? Molestiae, excepturi sed modi recusandae
-                    voluptatum deleniti esse voluptas quis eveniet magnam
-                    distinctio? Ducimus dolore aut maiores, inventore obcaecati
-                    magnam!
-                  </p>
-                </div>
-                <button class="btn btn-warning">Read Here!</button>
-              </div>
-            </div>
-            <div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
-              <div class="card">
-                <img
-                  class="card-img-top"
-                  src="assets/images/earth.jpg"
-                  alt="Card image cap"
-                />
-                <div class="card-body">
-                  <h2>Globalization</h2>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Repellat, maiores? Molestiae, excepturi sed modi recusandae
-                    voluptatum deleniti esse voluptas quis eveniet magnam
-                    distinctio? Ducimus dolore aut maiores, inventore obcaecati
-                    magnam!
-                  </p>
-                </div>
-                <button class="btn btn-warning">Read Here!</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Blogs Fin -->
-
-      <br />
+      <!-- Footer -->
 
       <section class="container-fluid">
         <footer class="mx-auto my auto text-center">
@@ -190,13 +102,13 @@
                 URM
               </h5>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="col-lg-4 col-md-6 col-xs-6">
               <p>
                 Copyright 2020<br />
                 Universal Relations Media
               </p>
             </div>
-            <div class="ftr-soc-lnk col-lg-4 col-md-6 col-sm-12">
+            <div class="ftr-soc-lnk col-lg-4 col-md-6 col-xs-6">
               <div class="row">
                 <a class="col-4" href="#"
                   ><i class="fa fa-youtube" aria-hidden="true"></i
