--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
 
 		<br>
 
+        <!-- Footer -->
+
 		<section class="container-fluid">
 			<footer class="mx-auto my auto text-center">
 				<div class="row footer-style">
@@ -144,12 +146,12 @@
 							</a>
 							URM</h5>
 					</div>
-					<div class="col-lg-4 col-md-6 col-sm-12">
+					<div class="col-lg-4 col-md-6">
 						<p>Copyright 2020<br>
                         Universal Relations Media
                         </p>
 					</div>
-					<div class="ftr-soc-lnk col-lg-4 col-md-6 col-sm-12">
+					<div class="ftr-soc-lnk col-lg-4 col-md-6">
 						<div class="row">
 							<a class="col-4" href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a>
 							<a class="col-4" href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
