Added contact page and image of myself

--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,10 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blogs.html">Blogs</a>
+              <a class="nav-link" href="#">Blogs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="test.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -72,21 +72,53 @@
       </div>
     </nav>
     <article class="container-fluid mt-5">
-      <!-- Content -->
-    <div class="container-fluid">
-      <div class="card-auto my-auto">
-        <img class="card-img-top-blog" src="assets/images/robot.jpg" alt="Card image cap" />
-        <div class="card-body">
-          <h1 class="card-title text-center"><u>Automation</u></h1>
-          <p class="card-text">
-            Automation, the advancement of robotic technology and artificial intelligence (AI) that surpasses human capabilities to perform tasks (MGI, 2017a, p. 1), is being heralded as the fourth industrial revolution (Calvão and Thara, 2019, p. 2). Following revolutions from the nineteenth-century attributed to: the steam engine; electrification; and microelectronics (Thomas, 2020). These former revolutions transformed the nature of work for the individual and had significant economic benefits for the states that had the capabilities to implement the use of new technologies (IOE, 2017, p. 6). Achieving these benefits required gradual changes in policy and the development of social programmes and infrastructure, providing a safety net for the individual through welfare systems, labour regulations and mandatory, state-funded education (MGI, 2017b, pp. 46-47) Ultimately leading to a duality of benefits for the state and their citizens: the state could effectively compete within an increasingly globalized economy vis-à-vis the improvement of working conditions and increased productivity, and incentivising the upskilling of their labour-force (Frey and Osborne, 2013, p. 12).
-          </p>
-          <p>
-            The stark difference between these revolutions and automation is the transformation of tasks that were routine, and easily mechanised, while still requiring the cognitive skills of humans (MGI, 2017a, p. 1). Recent developments in AI have led to greater cognitive abilities and accuracy than humans, such as can be seen with lip reading (MGI, 2017a, p. 3), and driverless cars, which was seen as an unachievable feature of robotics in 2004 (Frey and Osborne, 2013, p. 4). This highlights the exponential ability for machines to learn across short spans of time. The impact of AI and technological innovation is ‘ten times higher and at 300 times the scale or roughly 3000 times the impact of the Industrial Revolution’ (McKinsey Global Institute in IOE, 2017, p. 11). Thus, we are entering unknown territory for the future of the labour-force, with potentially catastrophic consequences for job displacement and a need for educational programmes that are recognised transnationally (IOE, 2017, p. 35).
-          </p>
-        </div>
-      </div>
+
+<!-- Callout -->
+
+<div class="jumbotron jumbotron-fluid">
+  <div class="container-fluid">
+  <div class="row">
+    <div class="col-md-6">
+    <h1 class="display-4">Contact me!</h1>
+    <br>
+    <p class="lead">If you would like to contact the author about any further information regarding myself or the content found across this site,
+    please email me or visit one of my social media pages and leave a message. I'll be quick to respond!</p>
+    <br>
+    <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Type</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Email</th>
+      <td>tobinstonelake@outlook.com</td>
+    </tr>
+    <tr>
+      <th scope="row">Youtube</th>
+      <td><a href="www.youtube.com">Tobin Stonelake <i class="fa fa-youtube" aria-hidden="true"></i></a></td>
+    </tr>
+    <tr>
+      <th scope="row">Facebook</th>
+      <td><a href="www.facebook.com" target="blank">Tobin Stonelake <i class="fa fa-facebook-official" aria-hidden="true"></i></a></td>
+    </tr>
+    <tr>
+      <th scope="row">Indeed</th>
+      <td><a href="www.indeed.com">Tobin Stonelake <i class="fa fa-linkedin-square" aria-hidden="true"></i></a></td>
+    </tr>
+  </tbody>
+</table>
     </div>
+    <div class="col-6 d-none d-md-block my-auto">
+    <img class="img-fluid" src="assets/images/me.jpg" alt="The author, looking smart in a suit.">
+    </div>
+  </div>
+  </div>
+</div>
+
+
       <br>
 
       <!-- Footer -->
