--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<a class="nav-link" href="blogs.html">Blogs</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="test.html">Contact</a>
+						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
