Updated contact page styling. Ready for testing across devices and adding the content for the final two blog pages.

--- a/contact.html
+++ b/contact.html
@@ -79,18 +79,12 @@
   <div class="container-fluid">
   <div class="row">
     <div class="col-md-6">
-    <h1 class="display-4">Contact me!</h1>
+    <h1 class="display-4"><u><strong>Contact me!</strong></u></h1>
     <br>
     <p class="lead">If you would like to contact the author about any further information regarding myself or the content found across this site,
     please email me or visit one of my social media pages and leave a message. I'll be quick to respond!</p>
     <br>
     <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Type</th>
-      <th scope="col"></th>
-    </tr>
-  </thead>
   <tbody>
     <tr>
       <th scope="row">Email</th>
@@ -111,13 +105,13 @@
   </tbody>
 </table>
     </div>
-    <div class="col-6 d-none d-md-block my-auto">
+    <div class="col-6 d-none d-md-block my-auto mx-auto">
     <img class="img-fluid" src="assets/images/me.jpg" alt="The author, looking smart in a suit.">
     </div>
   </div>
   </div>
 </div>
-
+    </article>
 
       <br>
 
@@ -156,7 +150,7 @@
           </div>
         </footer>
       </section>
-    </article>
+
     <!-- Java -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
