Completed content for Globalisation blog post

--- a/globalisation.html
+++ b/globalisation.html
@@ -143,60 +143,25 @@
             Through this very act, the discursive field of neoliberalism is paradoxically representative by signs of dissent from certain groups of its subjects which helps to reinforce the discourse that is being countered by the consummation of action by the dissenters as highlighting that the zone of protest are representative of where power is held (Death, 2010, p. 243). Through the notion that this is the actualised mentality and institutions are the key technologies used to implement this governmentality on a transnational scale. Therefore, by recognition of a neoliberal governmentality that transcends national borders, via the mechanisms of liberal institutions and through counter-conduct enacted by its subjects, this form of governmentality is solidified through pragmaticism as the way things are (Death, 2010, pp. 244-45). 
             </p>
             <p>
-           Thus, on a global scale, the dissenting homo economicus weighed up the cost – imprisonment, a victim of ‘policing’ , or financial hardship – of counter-conduct against these institutions for their global counterparts; by reiterating the benefits of decreasing inequality between the subjects who live under a neoliberal governmentality, decreasing influence and power of the corporations that cooperate with these institutions, and denouncing the principles institutions promote for states economic interactions (Sandberg, 2006, pp. 215-16).
-            </p>
-            <br>
-            <h4>Securitization and Automation:</h4>
-            <br>
-            <p>
-            The case for securitising automation is of particular importance in ensuring that the social and economic welfare of the global labour-force is preserved. If this is not securitised, then we face a monopoly from Silicon Valley companies and TNCs who can capitalise on the implementation of automation over human labour. Google and Facebook currently hire less people globally than General Motors did during the Great Depression (Naughton, 2019). Therefore, this analogises that automation poses an existential threat to the current global labour-force. Estimations towards job displacement as a consequence of automation ranges from 41% to 85% across developing countries, through reports by the Mckinsey Global Institute and the World Bank (See Table 1). 
-            </p>
-            <h5>Table 1</h5>
-            <br>
-            <div>
-            <img src="assets/images/table1.jpg" alt="Estimates of proportion of employment that is automatable in selected countries. Has three columns, relating to country, McKinsey Global Institute data and World Bank data. Argentina: 48%/65%. China: 51%/77%. Costa Rica: 52%/68%. Ethiopia: 50%/85%. India: 52%/69%. Malaysia: 51%/68%. Nigeria: 46%/65%. South Africa: 41%/67%. Thailand: 55%/72%." class="img-fluid">
-            <br>
-            <br>
-            <p class="float-right">
-            (‘Estimates of proportion of employment that is automatable in selected countries’, Schlogl and Sumner, 2018, p. 23).
-            </p>
-            </div>
-            <br>
-            <br>
-            <p>
-            In the United States, Frey and Osborne (2013, p. 41), estimate up to 47% of jobs are at high-risk of automation. In the United Kingdom, The Office for National Statistics estimates over 60% of jobs are within the medium- to high-risk category (ONS, 2019, p. 6). While in India, only 17% of their workforce has a regular wage (Calvão and Thara, 2019, p. 4). Huang and Sharif’s study on automation within Chinese factories sees their workforces drop between 67-85% (2017, p.65). Thus, it is a global phenomenon.
+            Thus, on a global scale, the dissenting homo economicus weighed up the cost – imprisonment, a victim of ‘policing’ , or financial hardship – of counter-conduct against these institutions for their global counterparts; by reiterating the benefits of decreasing inequality between the subjects who live under a neoliberal governmentality, decreasing influence and power of the corporations that cooperate with these institutions, and denouncing the principles institutions promote for states economic interactions (Sandberg, 2006, pp. 215-16).
             </p>
             <p>
-            If the labour-force is posed as the referent object, then it is in the interest of policy-makers to enact a performative speech act towards enacting extraordinary measures against the monopolisation of TNCs through increased taxation and diversifying job creation within these industries. Similar to the aforementioned ban on CFC use. One securitising measure that would require interstate, regional cooperation would be imposing regulatory measures on the taxation of ‘platform companies’, such as Google, who paid only 0.7% tax in one year, in regards to their global income (AFD, 2019, 1:31:30). Although this is a utopian ideal in the current global economy, it highlights the importance in securitising actors cooperating to pursue the extraordinary measures that enable the fiscal ability to provide a social safety net.
+            Similarly, the actors who embody these institutions also apply a cost-benefit analysis through use of violence or suppression against the dissenters and whether it undermines or empowers the neoliberal governmentality – such as the death of a protestor in Genoa in 2001 (O’Neill, 2004, p. 245). The greatest concern for both parties was amassing the cooperation needed to act against, or provide suppression for the preservation of, this neoliberal-governmentality (O’Neill, 2004, p. 247). To consider this through Game Theory, both are locked into a dangerous, game of ‘chicken’: if both swerve, then both lose any legitimacy for their cause; if one swerves, the other party retains dominance of power and represents the right way; and if neither swerve it could lead to civil disarray, nationally and internationally (Oye, 1985, p. 8). 
             </p>
             <p>
-            In the extreme projections towards job displacement, this would be a necessary factor in ensuring that welfare systems, such as a universal basic income (UBI) or training program subsidies (such as Singapore’s SkillsFuture Credit program (MGI, 2019, p. 22)), are accessible to the global labour-force. Furthermore, internationally recognised training programmes, such as the ASEAN Mutual Recognition Agreements (MRA) (IOE, 2017, p. 35), could further secure the welfare of the individual if projections towards the increase of a ‘gig economy’ are realised (MGI, 2017b, p. 46). Both these aspects, UBI and MRA, are two measures that can be implemented to ensure that societal economic inequality is somewhat alleviated. Though, for this to be truly effective it would require strategic measures akin to the level of the Marshall Plan (MGI, 2017b, p. 105). Table 2 summarises several strategies that adhere to this logic:
-            </p>
-             <h5>Table 2</h5>
-            <br>
-            <div>
-            <img src="assets/images/table2.jpg" alt="The space of potential public policy responses to automation. Managing Structural Change/Coping: Adaptability of labor - Skills Upgrading; Employment generation - Post-industrialisation/ARS, Investment in labor-intensive sectors, public works programs. Managing Structural Change/Containment: Labor costs and regulation - Tax cuts on labor, wage subsidies, lower minimum wage; Employment protection - Job protection legislation; Automation costs and regulation - Taxes on automation, Regulation that complicates automation, Tariffs on imports of non-primary goods. Managing inclusivity/Coping: Unemployment protection - Transition support, Unemployment insurance, Universal basic income, Active labor market policies" class="img-fluid">
-            <br>
-            <br>
-            <p class="float-right">
-            (‘The space of potential public policy responses to automation’, ARS = Automation Resistant Sector, Schlogl and Sumner, 2018, p. 32).
-            </p>
-            </div>
-            <br>
-            <br>
-            <h4>Automation and Gender:</h4>
-            <br>
-            <p>
-            The role of women and men in the wake of automation is another key consideration towards focusing security policy to non-state areas. Access and incentives towards education is the greatest factor in providing increased gendered-equality within this context. Currently, the technology sector employs less than 20% of women, which follows a trend of women’s participation in STEM educational programmes, accounting for only 35% of global students enrolled in higher education (MGI, 2019, p. 25). An interesting caveat of incentivising employers to hire women within the technology sector, is that it also limits gender biases in the development of technology, particularly within the AI field (MGI, 2019, p. 35). 
+            Between 1996 and 2001 there were 47 protests against liberal institutions (Lichbach, 2002, pp. 10-11). Ranging from ten participants in May 1998 in Kiev, against the European Bank for Reconstruction and Development, to over 100,000 global participants in September 1999 in the name of Seattle against the WTO. The increase of counter-conduct of this nature prompted states and institutions to share information to quell the threat of these protests, either by preventative means or direct offense - particularly under the auspice of ‘Anti-Terror’ policies after September 2001 (O’Neill, 2004, p. 246). 
             </p>
             <p>
-            Furthermore, the presupposed cultural perspectives that relate to the roles of men and women, with the former presented as being the primary earner could lead to a reaffirmation of patriarchal models and a devolution of social progress. If automation does lead to huge job displacement, then it could cause a domino effect that pushes women out of the workforce (MGI, 2019, p. 21). This would be due to the rise of low-skilled roles within sectors, such as healthcare, which are unlikely to be as susceptible to automation as other sectors and social biases favouring the employment of men over women (MGI, 2019, p. 18). 
+            Therefore, the sharing of information between states, vis-à-vis institutions, has, to an extent, increased cooperation in the international system (Keohane, 1998, p. 85). Although the increasing use of violence and deprivation of liberty tactics – preventative measures - sets a standard for those that wish to dissent from the discursive field of neoliberalism and the tactics that are permissible in quelling these threats, itself moulding a duality of logic for violence between the ‘police’ and the protestors themselves – violence breeds violence (Death, 2010, pp. 244-45).
+            </p>
+            <p>
+            A final characteristic of institutions leading to or preventing global governance is that of the vast increase of non-state actors, their varying imperatives and the rules or norms they present (Keohane, 1995, p. 48). If these rules or norms overlap, cooperation becomes easier, but this is in the context of Westernised liberal institutions, other institutions that coincide with the rise of power in the Global South may prohibit international governance (Mearsheimer, 1995, p. 6), due to the variances in their governmentality apparatuses (Corry, 2014a, p. 117). This is also true for activist groups, particularly through their use or non-use of violent tactics (O’Neill, 2004, p. 243). 
             </p>
             <br>
             <h4>Conclusion:</h4>
             <br>
             <p>
-            The effects of automation are unknown, as with any revolution of this nature. What we do know, is that previous industrial overhauls require the input and participation of governments and IGOs to alleviate the social consequences that are created. If automation is to be considered as successful, then actors must respond to the inequalities created by the monopolisation of technology companies. The most effective way to achieve this is to ensure that the security of the individual is ensured. Either through social safety nets, such as UBI, or by providing accessible educational programmes and an internationally accredited platform, such as with ASEAN MRA program. Furthermore, this requires the development of infrastructure to ensure that interstate cooperation is feasible and that global citizens have access to the technology that is tied to automation and the ‘gig economy’. Automation has global consequences and we need to look past the state for guidance on overcoming its issues.
+            The growth of non-state actors is likely to continue as technological developments that inhibit globalization continue to evolve. Itself increasing the likelihood of issues that lead to Transnational antiglobalization protests within the minds of homo economicus. The contemporary deciding factor for global governance is likely to be based on the triarchy between the Western-liberal model, an Asiatic model or one that is wholly universal for the wellbeing of all of global society. The latter model is utopian, at best, leaving it to the result of a shifting balance of power between ‘the West and the Rest’ to determine the likelihood of global governance. 
             </p>
         </div>
       </div>
